--- a/.gitignore
+++ b/.gitignore
@@ -24,10 +24,13 @@ ExportedObj/
 *.pdb
 *.opendb
 *.VC.db
+*.psd
+*.So
 
 # Unity3D generated meta files
 *.pidb.meta
 *.pdb.meta
+*.meta
 
 # Unity3D Generated File On Crash Reports
 sysinfo.txt
