--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,6 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+Assets/Floor/Texture/MINIATURE_CENTER_TABLE_WITH_TUBES_GLASS_OR_MARBLE/MINIATURE_CENTER_TABLE_WITH_TUBES_GLASS_OR_MARBLE/Mesa_de_centro7.stl
+*.3ds
+*.max
