--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,5 @@ sysinfo.txt
 Assets/Floor/Texture/MINIATURE_CENTER_TABLE_WITH_TUBES_GLASS_OR_MARBLE/MINIATURE_CENTER_TABLE_WITH_TUBES_GLASS_OR_MARBLE/Mesa_de_centro7.stl
 *.3ds
 *.max
+Assets/Scenes/Moon/m.prefab
+Assets/Scenes/Moon/m.unity
