--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,4 @@ Assets/Floor/Texture/MINIATURE_CENTER_TABLE_WITH_TUBES_GLASS_OR_MARBLE/MINIATURE
 *.max
 Assets/Scenes/Moon/m.prefab
 Assets/Scenes/Moon/m.unity
+Assets/Scenes/MallParts/Fruntiture/1.FBX
