--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "com.unity.adaptiveperformance": "2.2.1",
     "com.unity.adaptiveperformance.samsung.android": "2.2.1",
+    "com.unity.addressables": "1.18.19",
+    "com.unity.assetbundlebrowser": "https://github.com/Unity-Technologies/AssetBundles-Browser.git",
     "com.unity.cinemachine": "2.6.11",
     "com.unity.collab-proxy": "1.11.2",
     "com.unity.ide.rider": "2.0.7",
