--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@ Assets/Floor/Texture/MINIATURE_CENTER_TABLE_WITH_TUBES_GLASS_OR_MARBLE/MINIATURE
 Assets/Scenes/Moon/m.prefab
 Assets/Scenes/Moon/m.unity
 Assets/Scenes/MallParts/Fruntiture/1.FBX
+Assets/Scenes/Moon/master plan with light central building 2.fbx
