--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,25 @@ Assets/Scenes/Moon/m.prefab
 Assets/Scenes/Moon/m.unity
 Assets/Scenes/MallParts/Fruntiture/1.FBX
 Assets/Scenes/Moon/master plan with light central building 2.fbx
+*.bundle
+Assets/MyAssetBuilds/01
+Assets/MyAssetBuilds/02
+Assets/MyAssetBuilds/02.manifest
+Assets/MyAssetBuilds/03
+Assets/MyAssetBuilds/04
+Assets/MyAssetBuilds/04.manifest
+Assets/MyAssetBuilds/05
+Assets/MyAssetBuilds/05.manifest
+Assets/MyAssetBuilds/06
+Assets/MyAssetBuilds/06.manifest
+Assets/MyAssetBuilds/07
+Assets/MyAssetBuilds/07.manifest
+Assets/MyAssetBuilds/08
+Assets/MyAssetBuilds/08.manifest
+Assets/MyAssetBuilds/09
+Assets/MyAssetBuilds/09.manifest
+Assets/MyAssetBuilds/10
+Assets/MyAssetBuilds/10.manifest
+Assets/Scenes/AllInOneScen.unity
+Assets/Scenes/MallParts/Fruntiture/clothes/uploads_files_2358692_shoes2(1)/texturingSTART15.spp
+Assets/Scenes/MallParts/Fruntiture/اضائة.obj
