Before Upload Google Play

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,4 @@ Assets/MyAssetBuilds/10.manifest
 Assets/Scenes/AllInOneScen.unity
 Assets/Scenes/MallParts/Fruntiture/clothes/uploads_files_2358692_shoes2(1)/texturingSTART15.spp
 Assets/Scenes/MallParts/Fruntiture/اضائة.obj
+Assets/Models/010.PNG
