Before Upload Google Play

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,5 @@ Assets/Scenes/AllInOneScen.unity
 Assets/Scenes/MallParts/Fruntiture/clothes/uploads_files_2358692_shoes2(1)/texturingSTART15.spp
 Assets/Scenes/MallParts/Fruntiture/اضائة.obj
 Assets/Models/010.PNG
+Assets/Scenes/AllInOneScen/ReflectionProbe-0.exr
+Assets/Scenes/UI/ReflectionProbe-0.exr
