--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,5 @@ Assets/Scenes/MallParts/Fruntiture/اضائة.obj
 Assets/Models/010.PNG
 Assets/Scenes/AllInOneScen/ReflectionProbe-0.exr
 Assets/Scenes/UI/ReflectionProbe-0.exr
+*.snap
+*.zip
