--- a/Assets/Plugins/Android/AndroidManifest.xml
+++ b/Assets/Plugins/Android/AndroidManifest.xml
@@ -16,7 +16,7 @@
 		android:theme="@style/UnityThemeSelector"
 		android:icon="@drawable/app_icon"
         android:label="@string/app_name"
-        android:debuggable="true">
+        android:debuggable="false">
         <activity android:name="com.unity3d.player.UnityPlayerActivity"
                   android:label="@string/app_name">
             <intent-filter>
